stable/application-component/tests/golden/components/datadog.golden.yaml
---
# Source: application-component/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproduct-webserver
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
    tags.datadoghq.com/env: staging
    tags.datadoghq.com/service: myproduct
    tags.datadoghq.com/version: "0.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myproduct
      app.kubernetes.io/instance: myproduct-webserver
  template:
    metadata:
      annotations:
        rollme: "123abc"
      labels:
        app.kubernetes.io/name: myproduct
        app.kubernetes.io/instance: myproduct-webserver
        tags.datadoghq.com/env: staging
        tags.datadoghq.com/service: myproduct
        tags.datadoghq.com/version: "0.0.0"
    spec:
      serviceAccountName: myproduct
      securityContext:
        fsGroup: 100
        runAsUser: 100
      containers:
        - name: application-component
          image: "bitnami/ruby:0.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
