stable/application-component/tests/golden/components/hpa.golden.yaml
---
# Source: application-component/templates/hpa.yaml
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: myproduct-webserver
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-weight": "2"
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: myproduct-webserver
  minReplicas: 2
  maxReplicas: 16
  metrics:
    - type: External
      external:
        metric:
          name: "datadogmetric@app-component-test00000:origin-p95-latency"
        target:
          type: Value
          value: 500m
    - type: External
      external:
        metric:
          name: "datadogmetric@app-component-test00000:origin-requests-per-second"
        target:
          averageValue: 12
          type: AverageValue
    - type: Resource
      resource:
        name: cpu
        target:
          averageUtilization: 60
          type: Utilization
    - type: External
      external:
        metric:
          name: sidekiq.queue.size
          selector:
            matchLabels:
              environment: production
              product: servicing
        target:
          type: Value
          value: 2000
  behavior:
    scaleDown:
      policies:
      - periodSeconds: 300
        type: Pods
        value: 1
      stabilizationWindowSeconds: 180
    scaleUp:
      policies:
      - periodSeconds: 60
        type: Pods
        value: 2
      stabilizationWindowSeconds: 15
---
# Source: application-component/templates/datadog-metric.yaml
apiVersion: datadoghq.com/v1alpha1
kind: DatadogMetric
metadata:
  name: origin-p95-latency
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  query: p95:trace.nginx.handle{env:production,resource_name:/,service:origin-nginx}.rollup(avg, 60)
---
# Source: application-component/templates/datadog-metric.yaml
apiVersion: datadoghq.com/v1alpha1
kind: DatadogMetric
metadata:
  name: origin-requests-per-second
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  query: ewma_10(avg:nginx_ingress.controller.requests{service:origin-rails}.as_count().rollup(avg, 60))
---
# Source: application-component/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproduct-webserver
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: myproduct
      app.kubernetes.io/instance: myproduct-webserver
  template:
    metadata:
      annotations:
        rollme: "123abc"
      labels:
        app.kubernetes.io/name: myproduct
        app.kubernetes.io/instance: myproduct-webserver
        app.kubernetes.io/component: webserver
        app.kubernetes.io/version: 0.0.0
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: myproduct
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: myproduct-webserver
          image: "bitnami/ruby:0.0.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dynamic-sa-token
              mountPath: /var/run/secrets/tokens
              readOnly: true
          resources:
            limits:
              cpu: 1200m
              memory: 1500Mi
            requests:
              cpu: 400m
              memory: 500Mi
      volumes:
        - name: dynamic-sa-token
          projected:
            sources:
              - serviceAccountToken:
                  path: dynamic-sa-token
                  expirationSeconds: 600
