stable/application-component/tests/golden/components/image-global.golden.yaml
---
# Source: application-component/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproduct-webserver
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "1.2.3"
spec:
  replicas: 2
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: myproduct
      app.kubernetes.io/instance: myproduct-webserver
  template:
    metadata:
      annotations:
        rollme: "123abc"
      labels:
        app.kubernetes.io/name: myproduct
        app.kubernetes.io/instance: myproduct-webserver
        app.kubernetes.io/component: webserver
        app.kubernetes.io/version: 1.2.3
        sidecar.istio.io/inject: "true"
    spec:
      imagePullSecrets:
        - name: docker-login
      serviceAccountName: myproduct
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: myproduct-webserver
          image: "company/olb:1.2.3"
          imagePullPolicy: Always
          volumeMounts:
            - name: dynamic-sa-token
              mountPath: /var/run/secrets/tokens
              readOnly: true
          resources:
            limits:
              cpu: 1200m
              memory: 1500Mi
            requests:
              cpu: 400m
              memory: 500Mi
      volumes:
        - name: dynamic-sa-token
          projected:
            sources:
              - serviceAccountToken:
                  path: dynamic-sa-token
                  expirationSeconds: 600
