stable/application-component/tests/golden/components/image.golden.yaml
---
# Source: application-component/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproduct-webserver
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "1.2.3"
spec:
  replicas: 1
  minReadySeconds: 1
  progressDeadlineSeconds: 120
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: myproduct
      app.kubernetes.io/instance: myproduct-webserver
  template:
    metadata:
      annotations:
        rollme: "123abc"
      labels:
        app.kubernetes.io/name: myproduct
        app.kubernetes.io/instance: myproduct-webserver
    spec:
      imagePullSecrets:
        - name: docker-login
      serviceAccountName: myproduct
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 100
        runAsUser: 100
      containers:
        - name: application-component
          image: "matic/olb:1.2.3"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
