stable/application-component/tests/golden/components/ingress.values.yaml
global:
  application:
    product: myproduct
    environment: test
    version: "0.0.0"

  applicationImage:
    repository: "bitnami/ruby"

component: webserver

deployment:
  port: 3010

service:
  enabled: true
  port: 3011

ingress:
  enabled: true
  list:
    - host: abc.example.com
      additional_hosts:
        - admin.example.com
        - abc-live.example.com
      type: internal
      server_snippet: |
        location /secret/document { deny all; }
      deny_locations:
        - /uploads/document
      tls: example.com-tls

    - host: abc.someexample.com
      additional_hosts:
        - admin.someexample.com
        - broker.someexample.com
      type: internal
      annotations:
        nginx.ingress.kubernetes.io/configuration-snippet: |
          rewrite ^/crm/static/css/main.(.+).chunk.css$ /crm/static/css/main.chunk.css break;
          rewrite ^/crm/static/css/2.(.+).chunk.css$ /crm/static/css/2.chunk.css break;
          opentracing_tag "service.name" "abc-nginx";
      deny_locations:
          - /uploads/document
      tls: someexample.com-tls

    - host: abc.example.com
      type: external
      allow_locations:
        - /api/abc120/notification_events
      annotations:
        external-dns.alpha.kubernetes.io/hostname: abc.example.com
        nginx.ingress.kubernetes.io/ssl-ciphers: ""
      tls: example.com-tls

    - host: abc-notifications.example.com
      type: external
      allow_locations:
        - /scim/v2
        - /api/mail/envelope
      deny_locations:
        - /scim/v2/internal
      tls: example.com-tls

    - host: no-tls.example.com
      type: external
      allow_locations:
        - /api/plain
      annotations:
        external-dns.alpha.kubernetes.io/hostname: notls.example.com
