stable/application-component/tests/golden/components/ingress.golden.yaml
---
# Source: application-component/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproduct-webserver-ingress-internal-0
  annotations:
    kubernetes.io/ingress.class: "internal"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
    nginx.ingress.kubernetes.io/server-alias: "admin.example.com, abc-live.example.com"
    external-dns.alpha.kubernetes.io/hostname: "admin.example.com, abc-live.example.com, abc.matic.com"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /uploads/document { deny all; }
    
      location /secret/document { deny all; }
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  rules:
    - host: abc.matic.com
      http:
        paths:
          - backend:
              service:
                name: myproduct-webserver
                port:
                  number: 3011
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - abc.matic.com
      secretName: example.com-tls
---
# Source: application-component/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproduct-webserver-ingress-internal-1
  annotations:
    kubernetes.io/ingress.class: "internal"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/configuration-snippet: "rewrite ^/crm/static/css/main.(.+).chunk.css$ /crm/static/css/main.chunk.css break;\nrewrite ^/crm/static/css/2.(.+).chunk.css$ /crm/static/css/2.chunk.css break;\nopentracing_tag \"service.name\" \"abc-nginx\";\n"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
    nginx.ingress.kubernetes.io/server-alias: "admin.someexample.com, broker.someexample.com"
    external-dns.alpha.kubernetes.io/hostname: "admin.someexample.com, broker.someexample.com, abc.someexample.com"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /uploads/document { deny all; }
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  rules:
    - host: abc.someexample.com
      http:
        paths:
          - backend:
              service:
                name: myproduct-webserver
                port:
                  number: 3011
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - abc.someexample.com
      secretName: someexample.com-tls
---
# Source: application-component/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproduct-webserver-ingress-external-2
  annotations:
    kubernetes.io/ingress.class: "external"
    external-dns.alpha.kubernetes.io/hostname: "abc.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  rules:
    - host: abc.example.com
      http:
        paths:
          - backend:
              service:
                name: myproduct-webserver
                port:
                  number: 3011
            path: /api/abc120/notification_events
            pathType: Prefix
  tls:
    - hosts:
        - abc.example.com
      secretName: example.com-tls
---
# Source: application-component/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproduct-webserver-ingress-external-3
  annotations:
    kubernetes.io/ingress.class: "external"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
    external-dns.alpha.kubernetes.io/hostname: "abc-notifications.example.com"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /scim/v2/internal { deny all; }
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  rules:
    - host: abc-notifications.example.com
      http:
        paths:
          - backend:
              service:
                name: myproduct-webserver
                port:
                  number: 3011
            path: /scim/v2
            pathType: Prefix
          - backend:
              service:
                name: myproduct-webserver
                port:
                  number: 3011
            path: /api/mail/envelope
            pathType: Prefix
  tls:
    - hosts:
        - abc-notifications.example.com
      secretName: example.com-tls
---
# Source: application-component/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproduct-webserver-ingress-external-4
  annotations:
    kubernetes.io/ingress.class: "external"
    external-dns.alpha.kubernetes.io/hostname: "notls.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  rules:
    - host: no-tls.example.com
      http:
        paths:
          - backend:
              service:
                name: myproduct-webserver
                port:
                  number: 3011
            path: /api/plain
            pathType: Prefix
---
# Source: application-component/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myproduct-webserver
  labels:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webserver
    app.kubernetes.io/part-of: myproduct
    app.kubernetes.io/version: "0.0.0"
spec:
  type: ClusterIP
  ports:
    - port: 3011
      targetPort: 3010
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: myproduct
    app.kubernetes.io/instance: myproduct-webserver
